tests/compiletests/ui/dis/ptr_copy.normal.stderr
error: cannot memcpy dynamically sized data
    --> $CORE_SRC/intrinsics/mod.rs:4158:9
     |
4158 |         copy(src, dst, count)
     |         ^^^^^^^^^^^^^^^^^^^^^
     |
note: used from within `core::intrinsics::copy::<f32>`
    --> $CORE_SRC/intrinsics/mod.rs:4134:21
     |
4134 | pub const unsafe fn copy<T>(src: *const T, dst: *mut T, count: usize) {
     |                     ^^^^
note: called by `ptr_copy::copy_via_raw_ptr`
    --> $DIR/ptr_copy.rs:28:18
     |
28   |         unsafe { core::ptr::copy(src, dst, 1) }
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `ptr_copy::main`
    --> $DIR/ptr_copy.rs:33:5
     |
33   |     copy_via_raw_ptr(&i, o);
     |     ^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
    --> $DIR/ptr_copy.rs:32:8
     |
32   | pub fn main(i: f32, o: &mut f32) {
     |        ^^^^

error: cannot cast between pointer types
       from `*f32`
         to `*struct () {  }`
    --> $CORE_SRC/intrinsics/mod.rs:4146:9
     |
4146 | /         ub_checks::assert_unsafe_precondition!(
4147 | |             check_language_ub,
4148 | |             "ptr::copy requires that both pointer arguments are aligned and non-null",
4149 | |             (
...    |
4156 | |                 && ub_checks::maybe_is_aligned_and_not_null(dst, align, zero_size)
4157 | |         );
     | |_________^
     |
note: used from within `core::intrinsics::copy::<f32>`
    --> $CORE_SRC/intrinsics/mod.rs:4146:9
     |
4146 | /         ub_checks::assert_unsafe_precondition!(
4147 | |             check_language_ub,
4148 | |             "ptr::copy requires that both pointer arguments are aligned and non-null",
4149 | |             (
...    |
4156 | |                 && ub_checks::maybe_is_aligned_and_not_null(dst, align, zero_size)
4157 | |         );
     | |_________^
note: called by `ptr_copy::copy_via_raw_ptr`
    --> $DIR/ptr_copy.rs:28:18
     |
28   |         unsafe { core::ptr::copy(src, dst, 1) }
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `ptr_copy::main`
    --> $DIR/ptr_copy.rs:33:5
     |
33   |     copy_via_raw_ptr(&i, o);
     |     ^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
    --> $DIR/ptr_copy.rs:32:8
     |
32   | pub fn main(i: f32, o: &mut f32) {
     |        ^^^^

error: aborting due to 2 previous errors

